--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Hi there!</h2>
-    <h1 class="bg-warning">I'm Madeline</h1>
-    <i class="fa-brands fa-instagram"></i>
+    <h1>Hello, I'm Madeline Lester</h1>
+    <p>I am a Front-End Developer based in Florida</p>
   </body>
 </html>
