Added background-color, image, and root

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
     ></script>
     <link rel="stylesheet" href="src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front-End Developer - Madeline Lester</title>
   </head>
   <body>
-    <h1>Hello, I'm Madeline Lester</h1>
-    <p>I am a Front-End Developer based in Florida</p>
+    <div class="hero">
+      <h1>Hello, I'm Madeline Lester</h1>
+      <p>I am a Front-End Developer based in Florida</p>
+      <img
+        src="src/ml.JPG"
+        class="rounded img-fluid float-end ml-pic"
+        alt="Madeline"
+      />
+    </div>
   </body>
 </html>
