Added button and styling

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <div class="hero">
       <h1>Hello, I'm Madeline Lester</h1>
       <p>I am a Front-End Developer based in Florida</p>
+      <a class="btn contact-btn btn-outline-dark" href="#" role="button"
+        >Contact Me</a
+      >
       <img
         src="src/ml.JPG"
         class="rounded img-fluid float-end ml-pic"
