--- a/index.html
+++ b/index.html
@@ -30,17 +30,45 @@
     <title>Front-End Developer - Madeline Lester</title>
   </head>
   <body>
-    <div class="hero">
-      <h1>Hello, I'm Madeline Lester</h1>
-      <p>I am a Front-End Developer based in Florida</p>
-      <a class="btn contact-btn btn-outline-dark" href="#" role="button"
-        >Contact Me</a
-      >
-      <img
-        src="src/ml.JPG"
-        class="rounded img-fluid float-end ml-pic"
-        alt="Madeline"
-      />
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled">Disabled</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="d-flex hero">
+      <div class="flex-shrink-0">
+        <h1>Hello, I'm Madeline Lester</h1>
+        <p class="mt-3">I am a Front-End Developer based in Florida</p>
+        <a class="btn contact-btn btn-outline-dark mt-3" href="#" role="button"
+          >Contact Me</a
+        >
+      </div>
+      <div class="flex-grow-1 ms-3">
+        <img
+          src="src/ml.JPG"
+          class="rounded img-fluid float-end ml-pic"
+          alt="Madeline"
+        />
+      </div>
     </div>
   </body>
 </html>
