Added nav bar with some edits

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
     <title>Front-End Developer - Madeline Lester</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav
+      class="navbar navbar-expand-lg"
+      style="background-color: var(--primary-color)"
+    >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand text-dark" href="index.html">ML</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,10 +49,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active text-dark" aria-current="page" href="#"
+              >Home</a
+            >
+            <a class="nav-link text-dark" href="#">About</a>
+            <a class="nav-link text-dark" href="#">Projects</a>
+            <a class="nav-link text-dark">Contact</a>
           </div>
         </div>
       </div>
