--- a/about.html
+++ b/about.html
@@ -10,8 +10,9 @@
     <h1>About Me</h1>
     <h4>Work Experiences</h4>
     <p>
-      From behavior analyst to Front-End Developer, I enjoy tapping into my
-      creativity and problem solving abilities
+      From behavior analyst to Front-End Developer, Madeline enjoys tapping into
+      her creativity and problem solving abilities. Madeline stumbled upon
+      coding classes in January of 2022.
     </p>
     <h4>Skills</h4>
     <ul>
@@ -19,6 +20,10 @@
       <li>Fast learner</li>
       <li>Detail oriented</li>
     </ul>
-    <
+    <h4>Interests</h4>
+    <p>
+      Madeline loves spending time with her husband and son as well as their
+      large extended family. Traveling and trying new foods are also enjoyed.
+    </p>
   </body>
 </html>
