--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link active text-dark" aria-current="page" href="#"
               >Home</a
             >
-            <a class="nav-link text-dark" href="#">About</a>
+            <a class="nav-link text-dark" href="about.html">About</a>
             <a class="nav-link text-dark" href="#">Projects</a>
             <a class="nav-link text-dark">Contact</a>
           </div>
