Added contact me section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             >
             <a class="nav-link text-dark" href="about.html">About</a>
             <a class="nav-link text-dark" href="#">Projects</a>
-            <a class="nav-link text-dark">Contact</a>
+            <a class="nav-link text-dark" href="#">Contact</a>
           </div>
         </div>
       </div>
@@ -75,5 +75,10 @@
         />
       </div>
     </div>
+    <h2 class="contact-header>Get in Touch</h2>
+    <p>Want to collaborate or have questions?</p>
+    <a class="btn btn-outline-dark" href="mailto:mlester8815@gmail.com"
+      >Say Hello</a
+    >
   </body>
 </html>
