--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
         />
       </div>
     </div>
-    <h2 class="contact-header>Get in Touch</h2>
-    <p>Want to collaborate or have questions?</p>
-    <a class="btn btn-outline-dark" href="mailto:mlester8815@gmail.com"
-      >Say Hello</a
-    >
+    <div class="contact-section">
+      <h2>Get in Touch</h2>
+      <p class="m-4">Want to collaborate or have questions?</p>
+      <a class="btn btn-outline-dark" href="mailto:mlester8815@gmail.com"
+        >Say Hello ✌️</a
+      >
+    </div>
   </body>
 </html>
