Added and linked social media icons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       src="https://kit.fontawesome.com/dd1d08b011.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/dd1d08b011.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-End Developer - Madeline Lester</title>
@@ -78,9 +82,18 @@
     <div class="contact-section">
       <h2>Get in Touch</h2>
       <p class="m-4">Want to collaborate or have questions?</p>
-      <a class="btn btn-outline-dark" href="mailto:mlester8815@gmail.com"
+      <a class="btn btn-outline-dark mb-5" href="mailto:mlester8815@gmail.com"
         >Say Hello ✌️</a
       >
+    </div>
+    <div class="social-media m-5">
+      <a href="https://github.com/madellester"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+      <p class="mt-3">Open-sourced code by Madeline Lester</p>
     </div>
   </body>
 </html>
