Added anchor link for email

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             >
             <a class="nav-link text-dark" href="about.html">About</a>
             <a class="nav-link text-dark" href="#">Projects</a>
-            <a class="nav-link text-dark" href="#">Contact</a>
+            <a class="nav-link text-dark" href="#e-mail">Contact</a>
           </div>
         </div>
       </div>
@@ -67,7 +67,10 @@
       <div class="flex-shrink-0">
         <h1>Hello, I'm Madeline Lester</h1>
         <p class="mt-3">I am a Front-End Developer based in Florida</p>
-        <a class="btn contact-btn btn-outline-dark mt-3" href="#" role="button"
+        <a
+          class="btn contact-btn btn-outline-dark mt-3"
+          href="#e-mail"
+          role="button"
           >Contact Me</a
         >
       </div>
@@ -82,7 +85,10 @@
     <div class="contact-section">
       <h2>Get in Touch</h2>
       <p class="m-4">Want to collaborate or have questions?</p>
-      <a class="btn btn-outline-dark mb-5" href="mailto:mlester8815@gmail.com"
+      <a
+        id="e-mail"
+        class="btn btn-outline-dark mb-5"
+        href="mailto:mlester8815@gmail.com"
         >Say Hello ✌️</a
       >
     </div>
