Added projects.html and linked to nav bar

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               >Home</a
             >
             <a class="nav-link text-dark" href="about.html">About</a>
-            <a class="nav-link text-dark" href="#">Projects</a>
+            <a class="nav-link text-dark" href="projects.html">Projects</a>
             <a class="nav-link text-dark" href="#e-mail">Contact</a>
           </div>
         </div>
