Copied navbar from index.html to about.html and projects.html

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,36 @@
     <title>Document</title>
   </head>
   <body>
+    <nav
+      class="navbar fixed-top navbar-expand-lg"
+      style="background-color: var(--primary-color)"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand text-dark" href="index.html">ML</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active text-dark" aria-current="page" href="#"
+              >Home</a
+            >
+            <a class="nav-link text-dark" href="about.html">About</a>
+            <a class="nav-link text-dark" href="projects.html">Projects</a>
+            <a class="nav-link text-dark" href="#e-mail">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
     <h1>My Projects</h1>
   </body>
 </html>
