--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg"
+      class="navbar fixed-top navbar-expand-lg"
       style="background-color: var(--primary-color)"
     >
       <div class="container-fluid">
