Edited navbar across all html

--- a/about.html
+++ b/about.html
@@ -52,7 +52,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active text-dark" aria-current="page" href="#"
+            <a
+              class="nav-link active text-dark"
+              aria-current="page"
+              href="index.html"
               >Home</a
             >
             <a class="nav-link text-dark" href="about.html">About</a>
