--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
 
-    <h1>About Me</h1>
+    <h1 class="about-me-header">About Me</h1>
     <h4>Work Experiences</h4>
     <p>
       From behavior analyst to Front-End Developer, Madeline enjoys tapping into
