--- a/about.html
+++ b/about.html
@@ -67,22 +67,29 @@
     </nav>
 
     <h1 class="about-me-header">About Me</h1>
-    <h4>Work Experiences</h4>
-    <p>
-      From behavior analyst to Front-End Developer, Madeline enjoys tapping into
-      her creativity and problem solving abilities. Madeline stumbled upon
-      coding classes in January of 2022.
-    </p>
-    <h4>Skills</h4>
-    <ul>
-      <li>Persistant problem-solving abilities</li>
-      <li>Fast learner</li>
-      <li>Detail oriented</li>
-    </ul>
-    <h4>Interests</h4>
-    <p>
-      Madeline loves spending time with her husband and son as well as their
-      large extended family. Traveling and trying new foods are also enjoyed.
-    </p>
+
+    <div class="d-flex align-items-start flex-column">
+      <h4>Work Experiences</h4>
+      <p>
+        From behavior analyst to Front-End Developer, Madeline enjoys tapping
+        into her creativity and problem solving abilities. Madeline stumbled
+        upon coding classes in January of 2022.
+      </p>
+    </div>
+    <div class="d-flex align-items-end flex-column">
+      <h4>Skills</h4>
+      <ul>
+        <li>Persistant problem-solving abilities</li>
+        <li>Fast learner</li>
+        <li>Detail oriented</li>
+      </ul>
+    </div>
+    <div class="d-flex align-items-start flex-column">
+      <h4>Interests</h4>
+      <p>
+        Madeline loves spending time with her husband and son as well as their
+        large extended family. Traveling and trying new foods are also enjoyed.
+      </p>
+    </div>
   </body>
 </html>
