--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             >
             <a class="nav-link text-dark" href="about.html">About</a>
             <a class="nav-link text-dark" href="projects.html">Projects</a>
-            <a class="nav-link text-dark" href="#e-mail">Contact</a>
+            <a class="nav-link text-dark" href="index.html#e-mail">Contact</a>
           </div>
         </div>
       </div>
@@ -68,28 +68,42 @@
 
     <h1 class="about-me-header">About Me</h1>
 
-    <div class="d-flex align-items-start flex-column">
-      <h4>Work Experiences</h4>
-      <p>
-        From behavior analyst to Front-End Developer, Madeline enjoys tapping
-        into her creativity and problem solving abilities. Madeline stumbled
-        upon coding classes in January of 2022.
-      </p>
+    <div class="d-flex align-items-start flex-column about-me-section">
+      <div class="work-experience-section">
+        <h4 class="pb-3">Work Experience</h4>
+        <p>
+          From Board Certified Behavior Analyst to Front-End Developer, Madeline
+          enjoys tapping into her creativity and problem solving abilities.
+          Madeline stumbled upon coding classes in January of 2022. Madeline
+          quickly became enamored with coding and decided to pursue a new career
+          in which she could continue to collaborate and assist others in
+          achieving their goals.
+        </p>
+      </div>
     </div>
-    <div class="d-flex align-items-end flex-column">
-      <h4>Skills</h4>
-      <ul>
-        <li>Persistant problem-solving abilities</li>
-        <li>Fast learner</li>
-        <li>Detail oriented</li>
-      </ul>
+    <div class="d-flex align-items-start flex-column about-me-section">
+      <div class="skills-section">
+        <h4 class="pb-3">Skills</h4>
+        <p>Here are some of the skills Madeline can bring to the team:</p>
+        <ul>
+          <li>Persistant problem-solving abilities</li>
+          <li>Efficient, dedicated learner</li>
+          <li>Detail oriented</li>
+          <li>Creative</li>
+          <li>Effective collaborator</li>
+          <li>Strong communication skills</li>
+        </ul>
+      </div>
     </div>
-    <div class="d-flex align-items-start flex-column">
-      <h4>Interests</h4>
-      <p>
-        Madeline loves spending time with her husband and son as well as their
-        large extended family. Traveling and trying new foods are also enjoyed.
-      </p>
+    <div class="d-flex align-items-start flex-column about-me-section">
+      <div class="interests-section">
+        <h4 class="pb-3">Interests</h4>
+        <p>
+          Madeline loves spending time with her husband and son as well as their
+          large extended family and friends. She enjoys Rom-Coms and dry humor.
+          Traveling and trying new foods and wine are a bonus.
+        </p>
+      </div>
     </div>
   </body>
 </html>
