--- a/about.html
+++ b/about.html
@@ -105,5 +105,18 @@
         </p>
       </div>
     </div>
+    <div class="social-media m-5">
+      <a href="https://github.com/madellester" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+
+      <a
+        href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
+        target="_blank"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+
+      <p class="mt-3">Open-sourced code by Madeline Lester</p>
+    </div>
   </body>
 </html>
