--- a/projects.html
+++ b/projects.html
@@ -67,5 +67,18 @@
     </nav>
 
     <h1 class="projects-header">My Projects</h1>
+    <div class="social-media m-5">
+      <a href="https://github.com/madellester" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+
+      <a
+        href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
+        target="_blank"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+
+      <p class="mt-3">Open-sourced code by Madeline Lester</p>
+    </div>
   </body>
 </html>
