Added img, adjust location of images and

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="flex-grow-1 ms-3">
         <img
-          src="src/ml.JPG"
+          src="src/images/ml.JPG"
           class="rounded img-fluid float-end ml-pic"
           alt="Madeline"
         />
