--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>Document</title>
+    <title>My Projects - Madeline Lester</title>
   </head>
   <body>
     <nav
@@ -74,7 +74,7 @@
           <img
             src="images/yoga.png"
             class="img-fluid rounded home-img"
-            alt="yoga"
+            alt="weather"
           />
         </div>
         <div class="col-6">
