Transferred code from Projects page to Home page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,78 @@
         />
       </div>
     </div>
+
+    <h1 class="projects-header">My Projects</h1>
+
+    <div class="container text-center app-preview-display">
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded home-img"
+            alt="weather"
+          />
+        </div>
+        <div class="col-6">
+          <h4>Yoga App</h4>
+          <p class="app-description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
+          <button type="button" class="btn app-launch-btn pt-3 pb-3">
+            Launch Yoga App
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <h4>Weather App</h4>
+          <p class="app-description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
+          <button type="button" class="btn app-launch-btn pt-3 pb-3">
+            Launch Weather App
+          </button>
+        </div>
+
+        <div class="col-6">
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded home-img"
+            alt="weather"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded home-img"
+            alt="yogurt"
+          />
+        </div>
+        <div class="col-6">
+          <h4>Yogurt App</h4>
+          <p class="app-description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
+          <button type="button" class="btn app-launch-btn pt-3 pb-3">
+            Launch Yogurt App
+          </button>
+        </div>
+      </div>
+    </div>
+
     <div class="contact-section">
       <h2>Get in Touch</h2>
       <p class="m-4">Want to collaborate or have questions?</p>
