Edited My Projects section bubble tea app and weather app

--- a/index.html
+++ b/index.html
@@ -93,21 +93,23 @@
       <div class="row">
         <div class="col-6">
           <img
-            src="images/yoga.png"
+            class="w-75"
+            src="src/images/boba_tea.png"
             class="img-fluid rounded home-img"
-            alt="weather"
+            alt="boboa tea app screenshot"
           />
         </div>
         <div class="col-6">
-          <h4>Yoga App</h4>
+          <h4>Bubble Tea App</h4>
           <p class="app-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            This Bubble Tea app was Madeline's first project ever that sparked
+            her interest in web design. After taking an introductory class via
+            SheCodes with no prior experience, this app was her final project.
+            Madeline employed html, css, and javascript in developing this
+            product. Check it out here!
           </p>
-          <button type="button" class="btn app-launch-btn pt-3 pb-3">
-            Launch Yoga App
+          <button type="button" class="btn btn-dark app-launch-btn pt-3 pb-3">
+            Launch Bubble Tea App
           </button>
         </div>
       </div>
@@ -115,12 +117,7 @@
       <div class="row">
         <div class="col-6">
           <h4>Weather App</h4>
-          <p class="app-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
-          </p>
+          <p class="app-description"></p>
           <button type="button" class="btn app-launch-btn pt-3 pb-3">
             Launch Weather App
           </button>
