Bubble Tea app button added

--- a/index.html
+++ b/index.html
@@ -108,9 +108,13 @@
             Madeline employed html, css, and javascript in developing this
             product. Check it out here!
           </p>
-          <button type="button" class="btn btn-dark app-launch-btn pt-3 pb-3">
-            Launch Bubble Tea App
-          </button>
+          <a
+            class="btn btn-dark app-launch-btn pt-3 pb-3"
+            href="https://www.shecodes.io/workshops/shecodes-basics-948b080f-f680-4a22-b8bd-8d57ae6ee387/projects/728242"
+            target="_blank"
+            role="button"
+            >Launch Bubble Tea App</a
+          >
         </div>
       </div>
 
