--- a/index.html
+++ b/index.html
@@ -121,17 +121,26 @@
       <div class="row">
         <div class="col-6">
           <h4>Weather App</h4>
-          <p class="app-description"></p>
-          <button type="button" class="btn app-launch-btn pt-3 pb-3">
-            Launch Weather App
-          </button>
+          <p class="app-description">
+            The Weather app was Madeline's second project through SheCodes. This
+            project involved a significant study of javascript. Check out the
+            app and interact with it!
+          </p>
+          <a
+            class="btn app-launch-btn pt-3 pb-3"
+            href="https://calm-gingersnap-42cb99.netlify.app/"
+            target="_blank"
+            role="button"
+            >Launch Weather App</a
+          >
         </div>
 
         <div class="col-6">
           <img
-            src="images/weather.png"
+            class="w-75"
+            src="src/images/weather_app.png"
             class="img-fluid rounded home-img"
-            alt="weather"
+            alt="weather app screenshot"
           />
         </div>
       </div>
