--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h1 class="projects-header">My Projects</h1>
 
     <div class="container text-center app-preview-display">
-      <div class="row">
+      <div class="row p-5">
         <div class="col-6">
           <img
             class="w-75"
@@ -118,7 +118,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row p-5">
         <div class="col-6">
           <h4>Weather App</h4>
           <p class="app-description">
@@ -127,7 +127,7 @@
             app and interact with it!
           </p>
           <a
-            class="btn app-launch-btn pt-3 pb-3"
+            class="btn btn-dark app-launch-btn pt-3 pb-3"
             href="https://calm-gingersnap-42cb99.netlify.app/"
             target="_blank"
             role="button"
@@ -148,22 +148,26 @@
       <div class="row">
         <div class="col-6">
           <img
-            src="images/yogurt.png"
+            class="w-75 border"
+            src="src/images/portfolio_example.png"
             class="img-fluid rounded home-img"
-            alt="yogurt"
+            alt="portfolio example screenshot"
           />
         </div>
         <div class="col-6">
-          <h4>Yogurt App</h4>
+          <h4>Portfolio Template App</h4>
           <p class="app-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            Madeline's third project focused on making websites responsive. This
+            app was designed to be an example of a front-end developer's
+            portfolio.
           </p>
-          <button type="button" class="btn app-launch-btn pt-3 pb-3">
-            Launch Yogurt App
-          </button>
+          <a
+            class="btn btn-dark app-launch-btn pt-3 pb-3"
+            href="https://deluxe-puffpuff-1b88aa.netlify.app/index.html"
+            target="blank"
+            role="button"
+            >Launch Portfolio Template App</a
+          >
         </div>
       </div>
     </div>
