--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="row p-5">
         <div class="col-6">
           <img
-            class="w-75"
+            class="w-75 border rounded"
             src="src/images/boba_tea.png"
             class="img-fluid rounded home-img"
             alt="boboa tea app screenshot"
@@ -137,7 +137,7 @@
 
         <div class="col-6">
           <img
-            class="w-75"
+            class="w-75 border rounded"
             src="src/images/weather_app.png"
             class="img-fluid rounded home-img"
             alt="weather app screenshot"
@@ -148,7 +148,7 @@
       <div class="row">
         <div class="col-6">
           <img
-            class="w-75 border"
+            class="w-75 border rounded"
             src="src/images/portfolio_example.png"
             class="img-fluid rounded home-img"
             alt="portfolio example screenshot"
