Added horizontal lines and adjusted padding

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               >Home</a
             >
             <a class="nav-link text-dark" href="about.html">About</a>
-            <a class="nav-link text-dark" href="projects.html">Projects</a>
+            <a class="nav-link text-dark" href="#projects">Projects</a>
             <a class="nav-link text-dark" href="#e-mail">Contact</a>
           </div>
         </div>
@@ -86,8 +86,10 @@
         />
       </div>
     </div>
-
-    <h1 class="projects-header">My Projects</h1>
+    <hr />
+    <hr />
+    <hr />
+    <h1 class="projects-header" id="projects">My Projects</h1>
 
     <div class="container text-center app-preview-display">
       <div class="row p-5">
