Transferred code from About Me to Index

--- a/index.html
+++ b/index.html
@@ -174,6 +174,46 @@
       </div>
     </div>
 
+    <h1 class="about-me-header">About Me</h1>
+
+    <div class="d-flex align-items-start flex-column about-me-section">
+      <div class="work-experience-section">
+        <h4 class="pb-3">Work Experience</h4>
+        <p>
+          From Board Certified Behavior Analyst to Front-End Developer, Madeline
+          enjoys tapping into her creativity and problem solving abilities.
+          Madeline stumbled upon coding classes in January of 2022. Madeline
+          quickly became enamored with coding and decided to pursue a new career
+          in which she could continue to collaborate and assist others in
+          achieving their goals.
+        </p>
+      </div>
+    </div>
+    <div class="d-flex align-items-start flex-column about-me-section">
+      <div class="skills-section">
+        <h4 class="pb-3">Skills</h4>
+        <p>Here are some of the skills Madeline can bring to the team:</p>
+        <ul>
+          <li>Persistant problem-solving abilities</li>
+          <li>Efficient, dedicated learner</li>
+          <li>Detail oriented</li>
+          <li>Creative</li>
+          <li>Effective collaborator</li>
+          <li>Strong communication skills</li>
+        </ul>
+      </div>
+    </div>
+    <div class="d-flex align-items-start flex-column about-me-section">
+      <div class="interests-section">
+        <h4 class="pb-3">Interests</h4>
+        <p>
+          Madeline loves spending time with her husband and son as well as their
+          large extended family and friends. She enjoys Rom-Coms and dry humor.
+          Traveling and trying new foods and wine are a bonus.
+        </p>
+      </div>
+    </div>
+
     <div class="contact-section">
       <h2>Get in Touch</h2>
       <p class="m-4">Want to collaborate or have questions?</p>
