Created archor link for About Me section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               href="index.html"
               >Home</a
             >
-            <a class="nav-link text-dark" href="about.html">About</a>
+            <a class="nav-link text-dark" href="#about">About</a>
             <a class="nav-link text-dark" href="#projects">Projects</a>
             <a class="nav-link text-dark" href="#e-mail">Contact</a>
           </div>
@@ -176,7 +176,7 @@
     <hr />
     <hr />
     <hr />
-    <h1 class="about-me-header">About Me</h1>
+    <h1 class="about-me-header" id="about">About Me</h1>
 
     <div class="d-flex align-items-start flex-column about-me-section">
       <div class="work-experience-section">
