--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row p-5">
         <div class="col-6">
           <img
             class="w-75 border rounded"
