Added padding to app descriptions sections

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           />
         </div>
         <div class="col-6">
-          <h4>Bubble Tea App</h4>
-          <p class="app-description">
+          <h4 class="app">Bubble Tea App</h4>
+          <p class="app-description p-3">
             This Bubble Tea app was Madeline's first project ever that sparked
             her interest in web design. After taking an introductory class via
             SheCodes with no prior experience, this app was her final project.
@@ -122,8 +122,8 @@
 
       <div class="row p-5">
         <div class="col-6">
-          <h4>Weather App</h4>
-          <p class="app-description">
+          <h4 class="app">Weather App</h4>
+          <p class="app-description p-3">
             The Weather app was Madeline's second project through SheCodes. This
             project involved a significant study of javascript. Check out the
             app and interact with it!
@@ -157,8 +157,8 @@
           />
         </div>
         <div class="col-6">
-          <h4>Portfolio Template App</h4>
-          <p class="app-description">
+          <h4 class="app">Portfolio Template App</h4>
+          <p class="app-description p-3">
             Madeline's third project focused on making websites responsive. This
             app was designed to be an example of a front-end developer's
             portfolio.
