--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
     <hr />
     <hr />
     <hr />
-    <h1 class="about-me-header" id="about">About Me</h1>
+    <h2 class="about-me-header" id="about">About Me</h2>
 
     <div class="d-flex align-items-start flex-column about-me-section">
       <div class="work-experience-section">
-        <h4 class="pb-3">Work Experience</h4>
+        <h4 class="header pb-3">Work Experience</h4>
         <p>
           From Board Certified Behavior Analyst to Front-End Developer, Madeline
           enjoys tapping into her creativity and problem solving abilities.
@@ -106,7 +106,7 @@
     </div>
     <div class="d-flex align-items-start flex-column about-me-section">
       <div class="skills-section">
-        <h4 class="pb-3">Skills</h4>
+        <h4 class="header pb-3">Skills</h4>
         <p>Here are some of the skills Madeline can bring to the team:</p>
         <ul>
           <li>Persistant problem-solving abilities</li>
@@ -120,7 +120,7 @@
     </div>
     <div class="d-flex align-items-start flex-column about-me-section">
       <div class="interests-section">
-        <h4 class="pb-3">Interests</h4>
+        <h4 class="header pb-3">Interests</h4>
         <p>
           Madeline loves spending time with her husband and son as well as their
           large extended family and friends. She enjoys Rom-Coms and dry humor.
@@ -132,7 +132,7 @@
     <hr />
     <hr />
 
-    <h1 class="projects-header" id="projects">My Projects</h1>
+    <h2 class="projects-header" id="projects">My Projects</h2>
 
     <div class="container text-center app-preview-display">
       <div class="row p-5">
@@ -145,7 +145,7 @@
           />
         </div>
         <div class="col-6">
-          <h4 class="app">Bubble Tea App</h4>
+          <h4 class="header app">Bubble Tea App</h4>
           <p class="app-description p-3">
             This Bubble Tea app was Madeline's first project ever that sparked
             her interest in web design. After taking an introductory class via
@@ -165,7 +165,7 @@
 
       <div class="row p-5">
         <div class="col-6">
-          <h4 class="app">Weather App</h4>
+          <h4 class="header app">Weather App</h4>
           <p class="app-description p-3">
             The Weather app was Madeline's second project through SheCodes. This
             project involved a significant study of javascript. Check out the
@@ -190,7 +190,7 @@
         </div>
       </div>
 
-      <div class="row p-5">
+      <div class="row p-5 portfolio-app">
         <div class="col-6">
           <img
             class="w-75 border rounded"
@@ -200,7 +200,7 @@
           />
         </div>
         <div class="col-6">
-          <h4 class="app">Portfolio Template App</h4>
+          <h4 class="header app">Portfolio Template App</h4>
           <p class="app-description p-3">
             Madeline's third project focused on making websites responsive. This
             app was designed to be an example of a front-end developer's
