--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <hr />
 
     <div class="contact-section">
-      <h2>Get in Touch</h2>
+      <h2 class="header">Get in Touch</h2>
       <p class="m-4">Want to collaborate or have questions?</p>
       <a
         id="e-mail"
