Edited text content

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
           <h4 class="header pb-3">Work Experience</h4>
           <p>
             From Board Certified Behavior Analyst to Front-End Developer,
-            Madeline enjoys tapping into her creativity and problem solving
-            abilities. Madeline stumbled upon coding classes in January of 2022.
-            Madeline quickly became enamored with coding and decided to pursue a
-            new career in which she could continue to collaborate and assist
-            others in achieving their goals.
+            Madeline has always enjoyed tapping into her creativity and problem
+            solving abilities. Madeline stumbled upon coding classes in January
+            of 2022. Madeline quickly became enamored with coding and decided to
+            pursue a new career in which she could continue to collaborate and
+            assist others in achieving their goals.
           </p>
         </div>
 
@@ -146,11 +146,10 @@
         <div class="col-6">
           <h4 class="header app">Bubble Tea App</h4>
           <p class="app-description p-3">
-            This Bubble Tea app was Madeline's first project ever that sparked
-            her interest in web design. After taking an introductory class via
-            SheCodes with no prior experience, this app was her final project.
-            Madeline employed html, css, and javascript in developing this
-            product. Check it out here!
+            This Bubble Tea App was Madeline's first taste of coding that
+            sparked her interest in web design. After taking an introductory
+            class via SheCodes with no prior experience, this app was her final
+            project. Check it out here!
           </p>
           <a
             class="btn btn-dark app-launch-btn pt-3 pb-3"
@@ -166,9 +165,9 @@
         <div class="col-6">
           <h4 class="header app">Weather App</h4>
           <p class="app-description p-3">
-            The Weather app was Madeline's second project through SheCodes. This
-            project involved a significant study of javascript. Check out the
-            app and interact with it!
+            This Weather App can share real-time weather information. Type your
+            location or anywhere in the world into the search bar to find your
+            accurate forecast. Check out the app and interact with it!
           </p>
           <a
             class="btn btn-dark app-launch-btn pt-3 pb-3"
@@ -201,9 +200,8 @@
         <div class="col-6">
           <h4 class="header app">Portfolio Template App</h4>
           <p class="app-description p-3">
-            Madeline's third project focused on making websites responsive. This
-            app was designed to be an example of a front-end developer's
-            portfolio.
+            Madeline's Portfolio Template App is responsive. This app was
+            designed to be an example of a front-end developer's portfolio.
           </p>
           <a
             class="btn btn-dark app-launch-btn pt-3 pb-3"
