Formated Projects section for small screen

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <div class="container text-center app-preview-display">
       <div class="row p-5">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             class="w-75 border rounded"
             src="src/images/boba_tea.png"
@@ -143,7 +143,7 @@
             alt="boboa tea app screenshot"
           />
         </div>
-        <div class="col-6">
+        <div class="col">
           <h4 class="header app">Bubble Tea App</h4>
           <p class="app-description p-3">
             This Bubble Tea App was Madeline's first taste of coding that
@@ -162,7 +162,7 @@
       </div>
 
       <div class="row p-5">
-        <div class="col-6">
+        <div class="col">
           <h4 class="header app">Weather App</h4>
           <p class="app-description p-3">
             This Weather App can share real-time weather information. Type your
@@ -178,7 +178,7 @@
           >
         </div>
 
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             class="w-75 border rounded"
             src="src/images/weather_app.png"
@@ -189,7 +189,7 @@
       </div>
 
       <div class="row p-5 portfolio-app">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             class="w-75 border rounded"
             src="src/images/portfolio_example.png"
@@ -197,7 +197,7 @@
             alt="portfolio example screenshot"
           />
         </div>
-        <div class="col-6">
+        <div class="col">
           <h4 class="header app">Portfolio Template App</h4>
           <p class="app-description p-3">
             Madeline's Portfolio Template App is responsive. This app was
