Adjusted Intro Header for small screen

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
     </nav>
 
     <div class="d-flex hero">
-      <div class="flex-shrink-0">
+      <div>
         <h1>Hello, I'm Madeline Lester</h1>
-        <p class="mt-3">I am a Front-End Developer based in Florida</p>
+        <p class="job-title mt-3">
+          I am a Front-End Developer based in Florida
+        </p>
         <a
           class="btn contact-btn btn-outline-dark mt-3"
           href="#e-mail"
@@ -78,10 +80,10 @@
           >Contact Me</a
         >
       </div>
-      <div class="flex-grow-1 ms-3">
+      <div class="ms-3">
         <img
           src="src/images/ml.JPG"
-          class="rounded img-fluid float-end ml-pic"
+          class="rounded img-fluid ml-pic"
           alt="Madeline"
         />
       </div>
