Edited font-size and padding for all sections except About Me section

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <div class="contact-section">
       <h2 class="header">Get in Touch</h2>
-      <p class="m-4">Want to collaborate or have questions?</p>
+      <p class="contact-message m-4">Want to collaborate or have questions?</p>
       <a
         id="e-mail"
         class="btn btn-outline-dark mb-5"
