Re-organized About Me section

--- a/index.html
+++ b/index.html
@@ -92,42 +92,39 @@
     <hr />
     <hr />
     <h2 class="about-me-header" id="about">About Me</h2>
-    <div class="container">
-      <div class="row">
-        <div class="col-4 work-experience-section">
-          <h4 class="header pb-3">Work Experience</h4>
-          <p>
-            From Board Certified Behavior Analyst to Front-End Developer,
-            Madeline has always enjoyed tapping into her creativity and problem
-            solving abilities. Madeline stumbled upon coding classes in January
-            of 2022. Madeline quickly became enamored with coding and decided to
-            pursue a new career in which she could continue to collaborate and
-            assist others in achieving their goals.
-          </p>
-        </div>
 
-        <div class="col-4 skills-section">
-          <h4 class="header pb-3">Skills</h4>
-          <p>Here are some of the skills Madeline can bring to the team:</p>
-          <ul>
-            <li>Persistant problem-solving abilities</li>
-            <li>Efficient, dedicated learner</li>
-            <li>Detail oriented</li>
-            <li>Creative</li>
-            <li>Effective collaborator</li>
-            <li>Strong communication skills</li>
-          </ul>
-        </div>
+    <div class="work-experience-section">
+      <h4 class="header pb-3">Work Experience</h4>
+      <p>
+        From Board Certified Behavior Analyst to Front-End Developer, Madeline
+        has always enjoyed tapping into her creativity and problem solving
+        abilities. Madeline stumbled upon coding classes in January of 2022.
+        Madeline quickly became enamored with coding and decided to pursue a new
+        career in which she could continue to collaborate and assist others in
+        achieving their goals.
+      </p>
+    </div>
 
-        <div class="col-4 interests-section">
-          <h4 class="header pb-3">Interests</h4>
-          <p>
-            Madeline loves spending time with her husband and son as well as
-            their large extended family and friends. She enjoys Rom-Coms and dry
-            humor. Traveling and trying new foods and wine are a bonus.
-          </p>
-        </div>
-      </div>
+    <div class="skills-section">
+      <h4 class="header pb-3">Skills</h4>
+      <p>Here are some of the skills Madeline can bring to the team:</p>
+      <ul>
+        <li>Persistant problem-solving abilities</li>
+        <li>Efficient, dedicated learner</li>
+        <li>Detail oriented</li>
+        <li>Creative</li>
+        <li>Effective collaborator</li>
+        <li>Strong communication skills</li>
+      </ul>
+    </div>
+
+    <div class="interests-section">
+      <h4 class="header pb-3">Interests</h4>
+      <p>
+        Madeline loves spending time with her husband and son as well as their
+        large extended family and friends. She enjoys Rom-Coms and dry humor.
+        Traveling and trying new foods and wine are a bonus.
+      </p>
     </div>
     <hr />
     <hr />
