Edited hero to be responsive

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 
     <div class="d-flex hero">
-      <div>
+      <div class="flex-fill">
         <h1>Hello, I'm Madeline Lester</h1>
         <p class="job-title mt-3">
           I am a Front-End Developer based in Florida
@@ -80,10 +80,10 @@
           >Contact Me</a
         >
       </div>
-      <div class="ms-3">
+      <div class="flex-fill">
         <img
           src="src/images/ml.JPG"
-          class="rounded img-fluid ml-pic"
+          class="img-fluid rounded ml-pic"
           alt="Madeline"
         />
       </div>
