Added padding to hero image

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           >Contact Me</a
         >
       </div>
-      <div class="flex-fill">
+      <div class="flex-fill ps-5">
         <img
           src="src/images/ml.JPG"
           class="img-fluid rounded ml-pic"
