Edited About Me section narrative and adjusting padding

--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
     <div class="work-experience-section">
       <h4 class="header pb-3">Work Experience</h4>
       <p>
-        From Board Certified Behavior Analyst to Front-End Developer, Madeline
-        has always enjoyed tapping into her creativity and problem solving
-        abilities. Madeline stumbled upon coding classes in January of 2022.
-        Madeline quickly became enamored with coding and decided to pursue a new
-        career in which she could continue to collaborate and assist others in
-        achieving their goals.
+        Madeline is a Board Certified Behavior Analyst turned Front-End
+        Developer. Madeline has always enjoyed tapping into her creativity and
+        problem solving abilities. Madeline stumbled upon coding classes in
+        January of 2022. Madeline quickly became enamored with coding and
+        decided to pursue a new career in which she could continue to
+        collaborate and assist others in achieving their short-term and
+        long-term outcomes.
       </p>
     </div>
 
@@ -124,7 +125,6 @@
     <hr />
     <hr />
     <hr />
-
     <h2 class="projects-header" id="projects">My Projects</h2>
 
     <div class="container text-center app-preview-display">
