Edited styling small screen

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
       </div>
 
-      <div class="row p-5">
+      <div class="row p-5 weather-app">
         <div class="col">
           <h4 class="header app">Weather App</h4>
           <p class="app-description p-3">
@@ -182,7 +182,7 @@
         </div>
       </div>
 
-      <div class="row p-5 portfolio-app">
+      <div class="row p-5">
         <div class="col d-none d-lg-block">
           <img
             class="w-75 border rounded"
