Edited narrative for Work Experience and Skills

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       <h4 class="header pb-3">Work Experience</h4>
       <p>
         Madeline is a Board Certified Behavior Analyst turned Front-End
-        Developer. Madeline has always enjoyed tapping into her creativity and
-        problem solving abilities. Madeline stumbled upon coding classes in
+        Developer. She has always enjoyed tapping into her creativity and
+        problem-solving abilities. Madeline stumbled upon coding classes in
         January of 2022. Madeline quickly became enamored with coding and
         decided to pursue a new career in which she could continue to
         collaborate and assist others in achieving their short-term and
-        long-term outcomes.
+        long-term objectives.
       </p>
     </div>
 
@@ -105,12 +105,13 @@
       <h4 class="header pb-3">Skills</h4>
       <p>Here are some of the skills Madeline can bring to the team:</p>
       <ul>
-        <li>Persistant problem-solving abilities</li>
-        <li>Efficient, dedicated learner</li>
-        <li>Detail oriented</li>
-        <li>Creative</li>
         <li>Effective collaborator</li>
-        <li>Strong communication skills</li>
+        <li>Adept communicator</li>
+        <li>Takes initiative</li>
+        <li>Detail-oriented</li>
+        <li>Persistant problem-solver</li>
+        <li>Creative</li>
+        <li>Dedicated learner</li>
       </ul>
     </div>
 
@@ -119,7 +120,7 @@
       <p>
         Madeline loves spending time with her husband and son as well as their
         large extended family and friends. She enjoys Rom-Coms and dry humor.
-        Traveling and trying new foods and wine are a bonus.
+        Traveling and trying new foods and wine never get old.
       </p>
     </div>
     <hr />
