Deleted d-none from .ml-pic and increase h1 font small screen

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div class="container text-center app-preview-display">
       <div class="row p-5">
-        <div class="col d-none d-lg-block">
+        <div class="col d-lg-block">
           <img
             class="w-75 border rounded"
             src="src/images/boba_tea.png"
