Re-formated About Me and Projects sections text-alignment and padding

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="work-experience-section">
       <h4 class="header pb-3">Work Experience</h4>
-      <p>
+      <p class="work-description">
         Madeline is a Board Certified Behavior Analyst turned Front-End
         Developer. She has always enjoyed tapping into her creativity and
         problem-solving abilities. Madeline stumbled upon coding classes in
@@ -102,8 +102,10 @@
     </div>
 
     <div class="skills-section">
-      <h4 class="header pb-3">Skills</h4>
-      <p>Here are some of the skills Madeline can bring to the team:</p>
+      <h4 class="header skills-header pb-3">Skills</h4>
+      <p class="skills-description">
+        Here are some of the skills Madeline can bring to the team:
+      </p>
       <ul>
         <li>Effective collaborator</li>
         <li>Adept communicator</li>
@@ -117,7 +119,7 @@
 
     <div class="interests-section">
       <h4 class="header pb-3">Interests</h4>
-      <p>
+      <p class="interests-description">
         Madeline loves spending time with her husband and son as well as their
         large extended family and friends. She enjoys Rom-Coms and dry humor.
         Traveling and trying new foods and wine never get old.
@@ -139,7 +141,7 @@
           />
         </div>
         <div class="col">
-          <h4 class="header app">Bubble Tea App</h4>
+          <h4 class="header app boba-app">Bubble Tea App</h4>
           <p class="app-description p-3">
             This Bubble Tea App was Madeline's first taste of coding that
             sparked her interest in web design. After taking an introductory
@@ -193,7 +195,7 @@
           />
         </div>
         <div class="col">
-          <h4 class="header app">Portfolio Template App</h4>
+          <h4 class="header app portfolio-app">Portfolio Template App</h4>
           <p class="app-description p-3">
             Madeline's Portfolio Template App is responsive. This app was
             designed to be an example of a front-end developer's portfolio.
