Deleted d-none and css for centering image

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </p>
       </div>
 
-      <div class="flex-fill d-none d-lg-block">
+      <div class="flex-fill d-lg-block ml">
         <img
           src="src/images/ml.JPG"
           class="img-fluid rounded ml-pic"
