ml-pic adjusting positioning

--- a/index.html
+++ b/index.html
@@ -75,12 +75,8 @@
         </p>
       </div>
 
-      <div class="flex-fill d-lg-block ml">
-        <img
-          src="src/images/ml.JPG"
-          class="img-fluid rounded ml-pic"
-          alt="Madeline"
-        />
+      <div class="flex-fill d-lg-block ml-pic">
+        <img src="src/images/ml.JPG" class="img-fluid rounded" alt="Madeline" />
       </div>
     </div>
     <hr />
