Adjusted position small screen ml-pic final

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </nav>
 
-    <div class="hero">
+    <div class="d-lg-flex hero">
       <div class="flex-fill">
         <h1>Hello, I'm Madeline Lester</h1>
         <p class="job-title mt-3">
